--- a/activities/05-haiku-generator/css/style.css
+++ b/activities/05-haiku-generator/css/style.css
@@ -17,4 +17,11 @@ body {
   align-content: center;
   height: 100vh; /* Body is the height of the viewport */
   overflow: hidden; /* Hide anything that goes off the window size */
+  background-color: #346278;
+}
+
+#haiku {
+  font-family: Helvetica, sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
 }
