--- a/activities/06-raving-redactionist/css/style.css
+++ b/activities/06-raving-redactionist/css/style.css
@@ -18,3 +18,20 @@ body {
   height: 100vh; /* Body is the height of the viewport */
   overflow: hidden; /* Hide anything that goes off the window size */
 }
+
+#secret-document {
+  font-family: monospace;
+  font-size: 0.9rem;
+  width: 50vw;
+  margin: auto;
+}
+
+.redacted {
+  background-color: black;
+  user-select: none;
+}
+
+.revealed {
+  color: red;
+  text-decoration: underline;
+}
