--- a/activities/07-code-taker/css/style.css
+++ b/activities/07-code-taker/css/style.css
@@ -18,3 +18,17 @@ body {
   height: 100vh; /* Body is the height of the viewport */
   overflow: hidden; /* Hide anything that goes off the window size */
 }
+
+#poem {
+  font-size: 1.3rem;
+}
+
+#answer {
+  width: 10rem;
+  height: 2rem;
+  border: 1px dashed black;
+}
+
+.found {
+  color: red;
+}
